...
  'cloud_sync': Icons.cloud_sync_outlined,
  'label': Icons.label_outline,
  'delete': Icons.delete_outline,
  'file_download': Icons.file_download_outlined,
  'picture_as_pdf': Icons.picture_as_pdf_outlined,
  'cloud_upload': Icons.cloud_upload_outlined,
  'history': Icons.history_outlined,
  'map': Icons.map_outlined,
  'system_update': Icons.system_update_alt_outlined,
  'info': Icons.info_outline,
  'logout': Icons.logout_rounded,
  'settings': Icons.settings_outlined,

...
